--- a/project/assets/styles/index.css
+++ b/project/assets/styles/index.css
@@ -24,7 +24,7 @@ body {
     border: 2px inset #aaaaaa;
 }
 
-#my_Canvas {
+#gotham-canvas {
     width: 98%;
     height: 96vh;
     margin: 0 auto;
